kubernetes/my-deployment-eval.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-database-api-deployment
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: my-database-api
  template:
    metadata:
      labels:
        app: my-database-api
    spec:
      containers:
      - name: my-api-container
        image: jeahy/my-api-container:latest
        ports:
        - containerPort: 8050
      - name: my-database-container
        image: datascientest/mysql-k8s:1.0.0
        ports:
        - containerPort: 3306
