kubernetes/my-ingress-eval.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-database-api-ingress
spec:
  defaultBackend:
    service:
      name: my-database-api-service
      port:
        number: 8001
